[package]
name = "check-actions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking", "cookies"] }
serde_json = "1.0" 
prettytable-rs = "^0.8"
clap = { version = "3.1.12", features = ["derive"] }

[profile.release]
strip=true 
opt-level="z"
lto=true
